--- a/history.html
+++ b/history.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - Pico de Inveirno</title>
+    <title>History - Pico de Inveirno</title>
     <link rel="icon" href="https://civicmirror.com/images/NationalIdentity/200/1738556602_1897215266.png" type="image/png">
 
     <!-- Fonts -->
